edit: replace png with svg - edit: Search height for overflow, fix button search tap

--- a/src/components/Main.sass
+++ b/src/components/Main.sass
@@ -48,15 +48,13 @@
   width: 60px
   height: 45px
 
-  background-image: url('../home.png')
+  background-image: url('../loupe.svg')
   background-color: $grey-color
-  background-size: 22px
-  background-position: 12.5px 10px
+  background-size: 20px
+  background-position: 13.5px 12px
   background-repeat: no-repeat
-  content: 'house'
   
   border-radius: 35px
-  color: $light-color
 
   font-size: 1rem
 
@@ -69,6 +67,4 @@
     box-shadow: inset 0 0px 6px $dark-color
 
 .searchExpanderBtnLoupe
-  background-image: url('../loupe.png') !important
-  background-size: 20px
-  background-position: 13.5px 12px
+  background-image: url('../home.svg')  
