--- a/src/components/Search.sass
+++ b/src/components/Search.sass
@@ -10,6 +10,7 @@
   
   margin: 60px 0
   width: 100%
+  height: 85vh
 
   animation: .5s fadeIn
   z-index: 2
